# libav-examples

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
src/: extract_images.c  extract_rgb.c  filter_to_ppm.c  filtergrapher.cpp  mp4info.c  mp4info.h  remux.c  transcode.c
